Adicionando autenticação e autorização

--- a/SchoolOfDevs/appsettings.json
+++ b/SchoolOfDevs/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "Default": "Server=localhost;Database=schoolofdevs;Trusted_Connection=False;MultipleActiveResultSets=true;user id=sa;password=esve6140"
   },
+  "AppSettings": {
+    "Secret": "LyTYrM8aRz8FVEzKPm9LY%@GLXxxJCLVXGa4@xxn$c9FM7I*if"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
